--- a/public/css/custom/style.css
+++ b/public/css/custom/style.css
@@ -171,6 +171,7 @@ a, a:hover{
     border-radius: 15px;
     width: 40%;
     height: 30em;
+    background: #c6f;
 }
 
 /*-----------------------------------------------------------
