--- a/public/css/custom/style.css
+++ b/public/css/custom/style.css
@@ -83,7 +83,7 @@ a, a:hover {
 }
 
 #Logo img {
-    width: 93%;
+    height: 172%;
     border-radius: 53px;
     background: aliceblue;
     border: #44f solid 2px;
